# provekit

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: benchmark.yml  benchmark.yml.disabled  ci.yml  circuit_keys.yml  end-to-end.yml
co-noir-to-r1cs/: Cargo.toml
co-noir-to-r1cs/src/: groth16.rs  lib.rs
co-noir-to-r1cs/src/circom/: mod.rs  proof_schema.rs  proving_key.rs  solidity_template.sol.template  solidity_verifier.rs  zkey.rs
co-noir-to-r1cs/src/circom/test_vector/: verifier.sol
co-noir-to-r1cs/src/noir/: mod.rs  r1cs.rs  ultrahonk.rs
co-noir-to-r1cs/src/trace/: mod.rs  poseidon2.rs  poseidon2_rep3.rs
co-noir-to-r1cs/tests/: rep3.rs
co-noir-to-r1cs/tests/test_vectors/add3/: Nargo.toml
co-noir-to-r1cs/tests/test_vectors/add3/src/: main.nr
co-noir-to-r1cs/tests/test_vectors/poseidon2/: Prover.toml
co-noir-to-r1cs/tests/test_vectors/poseidon2/src/: main.nr
co-noir-to-r1cs/tests/test_vectors/range_check/: Nargo.toml  Prover.toml
co-noir-to-r1cs/tests/test_vectors/range_check/src/: main.nr
noir-examples/noir-passport-examples/fragmented_age_check/: Nargo.toml  README.md
noir-examples/noir-passport-examples/fragmented_age_check/compare_age/: Nargo.toml
noir-examples/noir-passport-examples/fragmented_age_check/data_check_integrity_sa/: Nargo.toml
noir-examples/noir-passport-examples/fragmented_age_check/sig_check_dsc_1300_hash/: Nargo.toml
noir-examples/noir-passport-examples/fragmented_age_check/sig_check_dsc_1300_verify/: Nargo.toml
noir-examples/noir-passport-examples/fragmented_age_check/sig_check_dsc_720/: Nargo.toml
noir-examples/noir-passport-examples/fragmented_age_check/sig_check_id_data_1300/: Nargo.toml
noir-examples/noir-passport-examples/fragmented_age_check/sig_check_id_data_720/: Nargo.toml
noir-examples/noir-passport-examples/merkle_age_check/: Nargo.toml  README.md
noir-examples/noir-passport-examples/merkle_age_check/compute_nullifier/: Nargo.toml  Prover.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_dsc_720/: Nargo.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_dsc_hash/: Nargo.toml  Prover.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_dsc_verify/: Nargo.toml  Prover.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_dsc_verify_1300/: Nargo.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_id_data/: Nargo.toml  Prover.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_id_data_1300/: Nargo.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_id_data_720/: Nargo.toml
noir-examples/noir-passport-examples/merkle_age_check/t_add_integrity_commit/: Nargo.toml  Prover.toml
noir-examples/noir-passport-examples/merkle_age_check/t_attest/: Nargo.toml  Prover.toml  compute_root.py
noir-examples/noir-passport-examples/monolithic/complete_age_check/: Nargo.toml
noir-examples/noir-passport-examples/passport_validity_check/src/: lib.nr
noir-examples/noir-passport-examples/zkpassport_libs/partial-sha256/: Nargo.toml
noir-examples/noir-passport/fragmented/merkle_age_check/: README.md
noir-examples/noir_sha256/src/: main.nr
noir-examples/partial_sha256/: Nargo.toml
noir-examples/partial_sha256/src/: tests.nr
provekit/common/: Cargo.toml
provekit/common/src/: hash_config.rs  interner.rs  lib.rs  noir_proof_scheme.rs  optimize.rs  prefix_covector.rs  prover.rs  r1cs.rs  sparse_matrix.rs  transcript_sponge.rs  verifier.rs  whir_r1cs.rs
provekit/common/src/file/: bin.rs  counting_writer.rs  mod.rs
provekit/common/src/skyscraper/: pow.rs  whir.rs
provekit/common/src/utils/: mod.rs  sumcheck.rs  zk_utils.rs
provekit/common/src/witness/: digits.rs  mod.rs  ram.rs  witness_builder.rs
provekit/prover/: Cargo.toml
provekit/prover/src/: input_utils.rs  lib.rs  r1cs.rs  whir_r1cs.rs
provekit/prover/src/witness/: mod.rs  witness_builder.rs
provekit/r1cs-compiler/: Cargo.toml
provekit/r1cs-compiler/src/: binops.rs  lib.rs  noir_proof_scheme.rs  noir_to_r1cs.rs  range_check.rs  sha256_compression.rs  spread.rs  whir_r1cs.rs
provekit/r1cs-compiler/src/memory/: mod.rs  rom.rs
provekit/verifier/: Cargo.toml
provekit/verifier/src/: lib.rs  whir_r1cs.rs
recursive-verifier/app/circuit/: circuit.go  circuit_test.go  matrix_evaluation.go  mtUtilities.go  public_weight_bench_test.go  whir.go
skyscraper/block-multiplier/benches/: bench.rs
skyscraper/block-multiplier/src/: constants.rs  lib.rs  portable_simd_wasm.rs  simd_utils_wasm.rs  test_utils.rs  utils.rs
skyscraper/block-multiplier/src/aarch64/: generate_montgomery_table.py
skyscraper/block-multiplier/src/rne/: constants.rs  mod.rs  portable_simd.rs  simd_utils.rs
skyscraper/block-multiplier/src/rtz/: constants.rs  mod.rs  portable_simd.rs  simd_utils.rs
skyscraper/bn254-multiplier/: Cargo.toml  build.rs
skyscraper/bn254-multiplier-codegen/: .gitignore  Cargo.toml  README.md
skyscraper/bn254-multiplier-codegen/src/: main.rs
skyscraper/bn254-multiplier/benches/: bench.rs
skyscraper/bn254-multiplier/examples/: count.rs
skyscraper/bn254-multiplier/src/: constants.rs  lib.rs  scalar.rs  test_utils.rs  utils.rs
skyscraper/bn254-multiplier/src/aarch64/: generate_montgomery_table.py
skyscraper/bn254-multiplier/src/rne/: batched.rs  constants.rs  mod.rs  mono.rs  portable_simd.rs  simd_utils.rs  single.rs
skyscraper/core/: Cargo.toml
skyscraper/core/benches/: bench.rs
skyscraper/core/src/: block3.rs  block4.rs  lib.rs  simple.rs  v1.rs
tooling/cli/: Cargo.toml
tooling/cli/src/cmd/: analyze_pkp.rs  (+6 more)
tooling/provekit-bench/: Cargo.toml
tooling/provekit-bench/benches/: bench.rs
tooling/provekit-bench/tests/: compiler.rs
tooling/provekit-ffi/: Cargo.toml  README.md  module.modulemap
tooling/provekit-ffi/include/: provekit_ffi.h
tooling/provekit-ffi/src/: ffi.rs  ffi_allocator.rs  lib.rs  mmap_allocator.rs  types.rs  utils.rs
tooling/provekit-gnark/src/: gnark_config.rs
tooling/verifier-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
(+85 files in other folders)
