[package]
name = "co-noir-to-r1cs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
provekit-common.workspace = true
provekit-r1cs-compiler.workspace = true
provekit-prover.workspace = true

# Noir language
acir.workspace = true
noirc_artifacts.workspace = true

# Cryptography and proof systems
ark-ff.workspace = true

# 3rd party
serde_json.workspace = true
tracing.workspace = true

# TACEO related imports (what we need for our code):
eyre.workspace = true
mpc-net.workspace = true
co-acvm.workspace = true
mpc-core.workspace = true
co-noir-types.workspace = true
itertools.workspace = true
ark-relations.workspace = true
ark-circom.workspace = true
ark-poly.workspace = true
co-circom.workspace = true
co-noir.workspace = true
rand.workspace = true
co-groth16.workspace = true
ark-ec.workspace = true
co-builder.workspace = true
ark-groth16.workspace = true
co-noir-common.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
circom-types.workspace = true
clap.workspace = true
noir-types.workspace = true

[lints]
workspace = true
