[package]
name = "provekit-prover"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
provekit-common.workspace = true

# Noir language
acir.workspace = true

# Cryptography and proof systems
ark-ff.workspace = true
ark-std.workspace = true

# 3rd party
anyhow.workspace = true
rand.workspace = true
tracing.workspace = true

# TACEO related imports (what we need for our code):
mpc-net.workspace = true
co-acvm.workspace = true
eyre.workspace = true
mpc-core.workspace = true
co-noir-types.workspace = true

[lints]
workspace = true
