[package]
name = "provekit-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
# Workspace crates
provekit-common.workspace = true
provekit-prover.workspace = true

# Noir language
acir.workspace = true
noirc_abi.workspace = true

# 3rd party
anyhow.workspace = true
serde_json.workspace = true
parking_lot = "0.12"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
libc = "0.2"

[lints]
workspace = true

[features]
default = []
